--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <https://www.youtube.com/results?search_query=boi
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/U_JS47QH-P4?si=Lk9UQ1OfCHQTaQ85" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </section>
 
